--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "json-server": "json-server --watch db.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.10.2",
+    "axios": "^0.27.2",
     "graphql": "^16.6.0",
+    "json-server": "^0.17.0",
     "nodemon": "^2.0.19",
     "uuid": "^9.0.0"
   }
