--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "apollo-server": "^3.10.2",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.2",
     "graphql": "^16.6.0",
     "json-server": "^0.17.0",
+    "mongoose": "6.6.2",
+    "mongoose-unique-validator": "3.1.0",
     "nodemon": "^2.0.19",
     "uuid": "^9.0.0"
   }
